[package]
name = "messiah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
etcetera = "0.8.0"
log = "0.4.20"
once_cell = "1.18.0"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
thirtyfour = "0.31.0"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
which = "5.0.0"

[dev-dependencies]
dotenv = "0.15.0"
